build: update Error Prone/NullAway versions and fix compiler args